# bagdock-python

./: README.md  pyproject.toml
.github/workflows/: publish.yml
bagdock/: __init__.py  client.py  exceptions.py  oauth.py
bagdock/resources/: loyalty.py  marketplace.py  operator.py
bagdock/types/: __init__.py
