[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bagdock"
version = "0.1.0"
description = "Official Bagdock API client for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
  { name = "Bagdock", email = "engineering@bagdock.com" },
]
keywords = ["bagdock", "sdk", "api", "self-storage"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.25.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[project.urls]
Homepage = "https://docs.bagdock.com/sdks/python"
Repository = "https://github.com/bagdock/bagdock-python"
Documentation = "https://docs.bagdock.com/sdks/python"

[tool.hatch.build.targets.wheel]
packages = ["bagdock"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.mypy]
strict = true
